Archive2/bc/dc05a3f1988526/main.cpp
void foo(int bar) { { int bar = 0; } }

void foo2(int bar) { int bar = 0; }

int main()
{
}